add device_metric v1 data contract, schema validation, and schema-registry probe

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,12 @@ GRAFANA_PORT=3000
 # ===== Grafana admin (dev only) =====
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=admin
+
+# ===== App wiring =====
+BOOTSTRAP_SERVERS=localhost:9092
+SCHEMA_REGISTRY_URL=http://localhost:8081
+
+TOPIC_DEVICE_METRIC=device_metrics_v1
+SUBJECT_DEVICE_METRIC=device_metric-value
+
+KAFKA_ACKS=all
