--- a/infra/compose/docker-compose.yml
+++ b/infra/compose/docker-compose.yml
@@ -11,6 +11,9 @@ volumes:
 
 services:
 
+  ###########################################################################
+  # 🟥 REDPANDA — Dual Listener Configuration (host + internal)
+  ###########################################################################
   redpanda:
     image: ${REDPANDA_IMAGE}
     command:
@@ -22,43 +25,66 @@ services:
       - --reserve-memory=0M
       - --check=false
       - --node-id=0
-      - --kafka-addr=PLAINTEXT://0.0.0.0:${KAFKA_BROKER_PORT}
-      - --advertise-kafka-addr=PLAINTEXT://redpanda:${KAFKA_BROKER_PORT}
+
+      # INTERNAL listener for Docker containers
+      - --kafka-addr=PLAINTEXT://0.0.0.0:29092
+      - --advertise-kafka-addr=PLAINTEXT://redpanda:29092
+
+      # HOST listener for macOS (Python producer)
+      - --kafka-addr=PLAINTEXT_HOST://0.0.0.0:${KAFKA_BROKER_PORT}
+      - --advertise-kafka-addr=PLAINTEXT_HOST://localhost:${KAFKA_BROKER_PORT}
+
+      # RPC
       - --rpc-addr=0.0.0.0:33145
       - --advertise-rpc-addr=redpanda:33145
+
     environment:
       REDPANDA_AUTO_CREATE_TOPICS: "true"
+
     ports:
-      - "${KAFKA_BROKER_PORT}:9092"
+      - "${KAFKA_BROKER_PORT}:9092"     # HOST listener
+      - "29092:29092"                   # INTERNAL listener
+
     healthcheck:
-      test: ["CMD-SHELL", "rpk cluster info --brokers=redpanda:${KAFKA_BROKER_PORT} >/dev/null 2>&1 || exit 1"]
+      test: ["CMD-SHELL", "rpk cluster info --brokers=localhost:${KAFKA_BROKER_PORT} >/dev/null 2>&1 || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 20
+
     networks:
       - rtap-net
 
+  ###########################################################################
+  # 🟦 SCHEMA REGISTRY (connects to internal listener)
+  ###########################################################################
   schema-registry:
     image: ${SCHEMA_REGISTRY_IMAGE}
     depends_on:
       redpanda:
         condition: service_healthy
+
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:${SCHEMA_REGISTRY_PORT}
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://redpanda:${KAFKA_BROKER_PORT}
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://redpanda:29092
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: INFO
       SCHEMA_REGISTRY_SCHEMA_COMPATIBILITY_LEVEL: BACKWARD
+
     ports:
       - "${SCHEMA_REGISTRY_PORT}:${SCHEMA_REGISTRY_PORT}"
+
     healthcheck:
       test: ["CMD-SHELL", "curl -sf http://localhost:${SCHEMA_REGISTRY_PORT}/subjects >/dev/null || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 20
+
     networks:
       - rtap-net
 
+  ###########################################################################
+  # 🟩 REDPANDA CONSOLE (uses internal listener)
+  ###########################################################################
   redpanda-console:
     image: ${REDPANDA_CONSOLE_IMAGE}
     depends_on:
@@ -66,83 +92,126 @@ services:
         condition: service_healthy
       schema-registry:
         condition: service_healthy
+
     environment:
-      - KAFKA_BROKERS=redpanda:${KAFKA_BROKER_PORT}
+      - KAFKA_BROKERS=redpanda:29092
       - KAFKA_SCHEMAREGISTRY_ENABLED=true
       - KAFKA_SCHEMAREGISTRY_URL=http://schema-registry:${SCHEMA_REGISTRY_PORT}
       - SERVER_LISTENPORT=8080
+
     ports:
       - "${REDPANDA_CONSOLE_PORT}:8080"
+
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:8080/health"]
       interval: 10s
       timeout: 5s
       retries: 20
+
     networks:
       - rtap-net
 
+  ###########################################################################
+  # 🟨 SPARK MASTER
+  ###########################################################################
   spark-master:
     image: ${SPARK_IMAGE}
     container_name: spark-master
-    command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.master.Master","--host","spark-master","--port","7077","--webui-port","8080"]
+
+    command: [
+      "/opt/spark/bin/spark-class",
+      "org.apache.spark.deploy.master.Master",
+      "--host","spark-master",
+      "--port","7077",
+      "--webui-port","8080"
+    ]
+
     ports:
       - "${SPARK_MASTER_UI_PORT}:8080"
       - "7077:7077"
+
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost:8080 | grep -q 'Spark Master'"]
+
     networks:
       - rtap-net
 
+  ###########################################################################
+  # 🟨 SPARK WORKER
+  ###########################################################################
   spark-worker:
     image: ${SPARK_IMAGE}
     container_name: spark-worker
+
     depends_on:
       spark-master:
         condition: service_healthy
-    command: ["/opt/spark/bin/spark-class","org.apache.spark.deploy.worker.Worker","spark://spark-master:7077","--webui-port","8081"]
-    # Worker UI is internal; no host port mapping needed now.
+
+    command: [
+      "/opt/spark/bin/spark-class",
+      "org.apache.spark.deploy.worker.Worker",
+      "spark://spark-master:7077",
+      "--webui-port","8081"
+    ]
+
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost:8081 | grep -q 'Worker' || true"]
       interval: 10s
       timeout: 5s
       retries: 20
+
     networks:
       - rtap-net
 
+  ###########################################################################
+  # 🟥 CLICKHOUSE
+  ###########################################################################
   clickhouse:
     image: ${CLICKHOUSE_IMAGE}
+
     ports:
       - "${CLICKHOUSE_HTTP_PORT}:8123"
       - "${CLICKHOUSE_TCP_PORT}:9000"
+
     volumes:
       - clickhouse-data:/var/lib/clickhouse
+
     healthcheck:
       test: ["CMD-SHELL", "clickhouse-client --host localhost --query 'SELECT 1' >/dev/null 2>&1"]
       interval: 10s
       timeout: 5s
       retries: 20
+
     networks:
       - rtap-net
 
+  ###########################################################################
+  # 🟦 GRAFANA
+  ###########################################################################
   grafana:
     image: ${GRAFANA_IMAGE}
+
     depends_on:
       clickhouse:
         condition: service_healthy
+
     environment:
       - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
       - GF_INSTALL_PLUGINS=grafana-clickhouse-datasource
+
     ports:
       - "${GRAFANA_PORT}:3000"
+
     volumes:
       - grafana-data:/var/lib/grafana
-      # NOTE: path is relative to this compose file location
       - ../../dashboards/grafana/provisioning:/etc/grafana/provisioning:ro
+
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:3000/api/health"]
       interval: 10s
       timeout: 5s
       retries: 20
+
     networks:
       - rtap-net
