implement topic management, Avro schemas, and high-throughput async producer

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,18 @@ TOPIC_DEVICE_METRIC=device_metrics_v1
 SUBJECT_DEVICE_METRIC=device_metric-value
 
 KAFKA_ACKS=all
+
+# ===== Topic IaC =====
+TOPIC_PARTITIONS=3
+TOPIC_RF=1
+TOPIC_RETENTION_MS=86400000
+TOPIC_SEGMENT_MS=900000
+TOPIC_CLEANUP_POLICY=delete
+
+# ===== Producer knobs =====
+PRODUCER_RATE_PER_SEC=2000
+PRODUCER_BURST=5000
+PRODUCER_LINGER_MS=5
+PRODUCER_MAX_IN_FLIGHT=100000
+PRODUCER_BATCH_SIZE=16384
+KEY_STRATEGY=device_id
